--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -346,6 +346,16 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                         {{/if}}
                     {{/for}}
                 {{/if}}
+			{{if data.manifest.supp}}
+                    <tr><th colspan="3" class="supp">Support</th></tr>
+                    {{for data.manifest["supp"]}}
+                        {{if value.rank == "Head of Personnel"}}
+                            <tr><td><span class="good">{{:value.name}}</span></td><td><span class="good">{{:value.rank}}</span></td><td><span class="good">{{:value.active}}</span></td></tr>
+                        {{else}}
+                            <tr><td><span class="average">{{:value.name}}</span></td><td><span class="average">{{:value.rank}}</span></td><td><span class="average">{{:value.active}}</span></td></tr>
+                        {{/if}}
+                    {{/for}}
+                {{/if}}
                 {{if data.manifest.civ}}
                     <tr><th colspan="3" class="civ">Civilian</th></tr>
                     {{for data.manifest["civ"]}}
