--- a/nano/templates/identification_computer.tmpl
+++ b/nano/templates/identification_computer.tmpl
@@ -132,9 +132,6 @@
           <div id="all-value.jobs" style='display: none;'>
             <table>
               <tr>
-                <th></th><th>Command</th>
-              </tr>
-              <tr>
                 <th>Special</th>
                 <td>
                   {{:helper.link("Captain", '', {'choice' : 'assign', 'assign_target' : 'Captain'}, data.target_rank == 'Captain' ? 'disabled' : null)}}
@@ -158,14 +155,6 @@
                 </td>
               </tr>
               <tr>
-                <th style="color: '#800080';">Science</th>
-                <td>
-                  {{for data.science_jobs}}
-                    {{:helper.link(value.display_name, '', {'choice' : 'assign', 'assign_target' : value.job}, data.target_rank == value.job ? 'disabled' : null)}}
-                  {{/for}}
-                </td>
-              </tr>
-              <tr>
                 <th style="color: '#DD0000';">Security</th>
                 <td>
                   {{for data.security_jobs}}
@@ -174,6 +163,22 @@
                 </td>
               </tr>
               <tr>
+              <tr>
+                <th style="color: '#C060C0';">Science</th>
+                <td>
+                  {{for data.science_jobs}}
+                    {{:helper.link(value.display_name, '', {'choice' : 'assign', 'assign_target' : value.job}, data.target_rank == value.job ? 'disabled' : null)}}
+                  {{/for}}
+                </td>
+              </tr>
+              <tr>
+                <th style="color: '#A0A0A0';">Support</th>
+                <td>
+                  {{for data.support_jobs}}
+                    {{:helper.link(value.display_name, '', {'choice' : 'assign', 'assign_target' : value.job}, data.target_rank == value.job ? 'disabled' : null)}}
+                  {{/for}}
+                </td>
+              </tr>
                 <th style="color: '#808080';">Civilian</th>
                 <td>
                   {{for data.civilian_jobs}}
