--- a/nano/templates/telescience_console.tmpl
+++ b/nano/templates/telescience_console.tmpl
@@ -1,6 +1,6 @@
 <!-- 
 Title: Telescience Control UI 
-Used In File(s): \code\modules\telesci\telesci_computer.dm
+Used In File(s): \code\game\machinery\computer\telescience.dm
  -->
 <div class="item">
 	<div class="itemLabel">Coordinates:</div>
@@ -13,8 +13,8 @@ Used In File(s): \code\modules\telesci\telesci_computer.dm
 <div class="item">
 	<div class="itemLabel">Controls:</div>
 	<div class="itemContent">
-		{{:helper.link('Send', 'gear', {'send': 1}, null, (data.coordx != null && data.coordy != null && data.coordz != null) ? '' : 'disabled')}}
-		{{:helper.link('Receive', 'gear', {'receive': 1}, null, (data.coordx != null && data.coordy != null && data.coordz != null) ? '' : 'disabled')}}
+		{{:helper.link('Send', 'gear', {'send': 1}, null, (data.coordx != 'Unset' && data.coordy != 'Unset' && data.coordz != 'Unset') ? '' : 'disabled')}}
+		{{:helper.link('Receive', 'gear', {'receive': 1}, null, (data.coordx != 'Unset' && data.coordy != 'Unset' && data.coordz != 'Unset') ? '' : 'disabled')}}
 		{{:helper.link('Recalibrate', 'gear', {'recal': 1})}}
 	</div>
 </div>
