--- a/nano/templates/air_alarm.tmpl
+++ b/nano/templates/air_alarm.tmpl
@@ -127,24 +127,24 @@ Used In File(s): /code/game/machinery/alarm.dm
 		{{for data.vents}}
 			<div class="statusDisplay">
 				<div class="line">
-					<b>{{>value.name}}:</b> {{:value.state}}
+					<b>{{>value.name}}:</b>
 				</div>
 				<div class="line">
 					<div class="statusLabel">Operating:</div>
 					<div class="statusValue">
 						{{:helper.link(value.power ? 'On':'Off','power',{'id_tag':value.id_tag,'command':'power','val':value.power?0:1},null,(value.power?'linkOn':'red'))}}
 						{{if value.direction=="siphon"}}
-							{{:helper.link('Siphoning','arrowthickstop-1-s',{'id_tag':value.id_tag,'command':'set_dir','dir':'release'})}}
+							{{:helper.link('Siphoning','arrowthickstop-1-s',{'id_tag':value.id_tag,'command':'direction','val':'1'})}}
 						{{else}}
-							{{:helper.link('Blowing','arrowthick-1-n',{'id_tag':value.id_tag,'command':'set_dir','dir':'siphon'})}}
+							{{:helper.link('Blowing','arrowthick-1-n',{'id_tag':value.id_tag,'command':'direction','val':'0'})}}
 						{{/if}}
 					</div>
 				</div>
 				<div class="line">
 					<div class="statusLabel">Pressure checks:</div>
 					<div class="statusValue">
-						{{:helper.link('External','power',{'id_tag':value.id_tag,'command':'checks','val':helper.xor(value.checks,1)},null,(value.checks == 1 ?'linkOn':'red'))}}
-						{{:helper.link('Internal','power',{'id_tag':value.id_tag,'command':'checks','val':helper.xor(value.checks,2)},null,(value.checks == 2 ?'linkOn':'red'))}}
+						{{:helper.link('External','power',{'id_tag':value.id_tag,'command':'checks','val':1},null,(value.checks == 1 ?'linkOn':''))}}
+						{{:helper.link('Internal','power',{'id_tag':value.id_tag,'command':'checks','val':2},null,(value.checks == 2 ?'linkOn':''))}}
 					</div>
 				</div>
 				<div class="line">
@@ -165,7 +165,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 		{{for data.scrubbers}}
 			<div class="statusDisplay">
 				<div class="line">
-					<b>{{>value.name}}:</b> {{:value.state}}
+					<b>{{>value.name}}:</b>
 				</div>
 				<div class="line">
 					<div class="statusLabel">Operating:</div>
@@ -188,7 +188,7 @@ Used In File(s): /code/game/machinery/alarm.dm
 					<div class="statusLabel">Filtering:</div>
 					<div class="statusValue">
 						{{:helper.link('CO<sub>2</sub>',null,{'id_tag':value.id_tag,'command':'co2_scrub','val':(value.filter_co2==0?1:0)},null,(value.filter_co2?'linkOn':''))}}
-						{{:helper.link('Plasma',        null,{'id_tag':value.id_tag,'command':'tox_scrub','val':(value.filter_tox==0?1:0)},null,(value.filter_tox?'linkOn':''))}}
+						{{:helper.link('Plasma',        null,{'id_tag':value.id_tag,'command':'tox_scrub','val':(value.filter_toxins==0?1:0)},null,(value.filter_toxins?'linkOn':''))}}
 						{{:helper.link('N<sub>2</sub>O',null,{'id_tag':value.id_tag,'command':'n2o_scrub','val':(value.filter_n2o==0?1:0)},null,(value.filter_n2o?'linkOn':''))}}
 						{{:helper.link('O<sub>2</sub>', null,{'id_tag':value.id_tag,'command':'o2_scrub', 'val':(value.filter_o2 ==0?1:0)},null,(value.filter_o2 ?'linkOn':''))}}
 					</div>
