--- a/nano/templates/doppler_array.tmpl
+++ b/nano/templates/doppler_array.tmpl
@@ -21,5 +21,5 @@
 		</div>
 	{{/for}}
 	<br/>
-	{{:helper.link("Print all logs", "print", {"print_logs": 'yes'}, data.printer_timer ? 'disabled' : null)}}
+	{{:helper.link("Print all logs", "print", {"print_logs": 'yes'}, data.printing ? 'disabled' : null)}}
 {{/if}}
