--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -342,7 +342,8 @@ h1.alert, h2.alert			{color: #000000;}
 .clown					{color: #ff0000;}
 .shadowling				{color: #3b2769;}
 .vulpkanin				{color: #B97A57;}
-.abductor				{color: #800080;}
+.abductor				{color: #800080; font-style: italic;}
+.mind_control				{color: #A00D6F; font-size: 3; font-weight: bold; font-style: italic;}
 .rough					{font-family: 'Trebuchet MS', cursive, sans-serif;}
 .say_quote				{font-family: Georgia, Verdana, sans-serif;}
 .cult					{color: #800080; font-weight: bold; font-style: italic;}
