--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -337,6 +337,7 @@ h1.alert, h2.alert			{color: #000000;}
 .diona					{color:	#804000;	font-weight: bold;}
 .trinary				{color: #727272;}
 .kidan					{color: #664205;}
+.zombie					{color: #a87474;}
 .slime					{color: #0077AA;}
 .drask					{color: #a3d4eb; font-family: "Arial Black";}
 .clown					{color: #ff0000;}
