--- a/nano/templates/file_manager.tmpl
+++ b/nano/templates/file_manager.tmpl
@@ -35,9 +35,9 @@
 							{{if data.usbconnected}}
 								{{:helper.link('EXPORT', 'upload', {'action' : 'PRG_copytousb', 'name' : value.name}, value.undeletable ? 'disabled' : null)}}
 							{{if !value.encrypted}}
-								{{:helper.link('ENCRYPT', null, { "PRG_encrypt" : value.name }, (value.undeletable) ? 'disabled' : null)}}
+								{{:helper.link('ENCRYPT', null, { 'PRG_encrypt' : value.name }, (value.undeletable) ? 'disabled' : null)}}
 							{{else}}
-								{{:helper.link('DECRYPT', null, { "PRG_decrypt" : value.name }, (value.undeletable) ? 'disabled' : null)}}
+								{{:helper.link('DECRYPT', null, { 'PRG_decrypt' : value.name }, (value.undeletable) ? 'disabled' : null)}}
 							{{/if}}
 							{{if data.usbconnected}}
 								{{:helper.link('EXPORT', 'upload', {'action' : 'PRG_copytousb', 'name' : value.name}, value.undeletable ? 'disabled' : null)}}
