--- a/nano/templates/newscaster.tmpl
+++ b/nano/templates/newscaster.tmpl
@@ -140,13 +140,14 @@ Property of Nanotrasen</font><br>
 			{{for data.messages}}
 				<div class='statusDisplay'>
 					<p align="center"> 
-					<font size="5">
-					<b>{{:value.title}}</b></font><br>
+						<font size="5"><b>{{:value.title}}</b></font><br>
+					</p>
 					{{if value.img}}
-					<img src='tmp_photo{{:value.message_number}}.png' width=350><br>
+						<img src='tmp_photo{{:value.message_number}}.png' width=350><br>
 					{{/if}}		
 					<p align="justify"> 					
-					{{:value.body}}<br>
+						{{:value.body}}<br>
+					</p>
 					<i><font size=1>[{{:value.message_type}} by <span class='good'>{{:value.author}}</span>]</font></i><br>
 					<i><font size=1>Message view count: {{:value.view_count}}</font></i>
 				</div>
