--- a/nano/templates/newscaster.tmpl
+++ b/nano/templates/newscaster.tmpl
@@ -139,13 +139,13 @@ Property of Nanotrasen</font><br>
 		{{else}}
 			{{for data.messages}}
 				<div class='statusDisplay'>
-					<p style='text-align:center'> 
+					<p style='text-align: center;'> 
 						<font size="5"><b>{{:value.title}}</b></font><br>
 					</p>
 					{{if value.img}}
 						<img src='tmp_photo{{:value.message_number}}.png' style='display: block; margin-left: auto; margin-right: auto;' width=350><br>
 					{{/if}}		
-					<p style='text-align:justify'> 					
+					<p style='text-align: justify;'> 					
 						{{:value.body}}<br>
 					</p>
 					<i><font size=1>[{{:value.message_type}} by <span class='good'>{{:value.author}}</span>]</font></i><br>
