--- a/nano/templates/spawners_menu.tmpl
+++ b/nano/templates/spawners_menu.tmpl
@@ -9,8 +9,8 @@
 					{{:value.desc}}
 				</div>
 				<div class='floatRight'>
-					{{:helper.link('Jump', null, {'action': value.name})}}
-					{{:helper.link('Spawn', null, {'action': value.name})}}
+					{{:helper.link('Jump', null, {'action': 'jump', 'uid': value.uids})}}
+					{{:helper.link('Spawn', null, {'action': 'spawn', 'uid': value.uids})}}
 				</div>
 			</div>
 		{{/for}}
