--- a/goon/browserassets/css/browserOutput.css
+++ b/goon/browserassets/css/browserOutput.css
@@ -276,7 +276,7 @@ em						{font-style: normal;	font-weight: bold;}
 .medradio				{color: #009190;}
 .sciradio				{color: #993399;}
 .supradio				{color: #7F6539;}
-.srvradio				{color: #80A000;}
+.srvradio				{color: #d38106;}
 .admin_channel			{color: #9A04D1;	font-weight: bold;}
 .mentor_channel			{color: #775BFF;	font-weight: bold;}
 .mentor_channel_admin      {color: #A35CFF;	font-weight: bold;}
