--- a/nano/templates/uplink.tmpl
+++ b/nano/templates/uplink.tmpl
@@ -20,7 +20,7 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
 </div>
 <br>
 
-{{if data.menu == 0}}
+{{if data.menu == 0 || data.menu == 2}}
     <H2><span class="white">Request items:</span></H2>
     <span class="white"><i>Each item costs a number of tele-crystals as indicated by the number following their name.</i></span>
 	<div class="item">
@@ -32,23 +32,34 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
         </div>
     </div>
     <br>
-    {{for data.nano_items}}
-        <div class="item">
-            <h3><span class="white">{{:value.Category}}</span></h3>
-        </div>
-        {{for value.items :itemValue:itemIndex}}
-            <div class="item">
-                {{:helper.link( itemValue.Name, 'gear', {'buy_item' : itemValue.obj_path, 'cost' : itemValue.Cost}, itemValue.Cost > data.crystals ? 'disabled' : null, null)}} - <span class="white">{{:itemValue.Cost}}</span>
-            </div>
+	
+{{if data.menu == 0}}
+	{{for data.nano_items}}
+		<div class="item">
+			{{:helper.link ( value.Category, 'gear', {'menu' : 2, 'category' : value.Category}, null, null)}}
+		</div>
+	{{/for}}
 
-            {{if itemValue.Cost <= data.crystals && data.descriptions}}
-                <div class="item">
-                    {{:itemValue.Description}}
-                </div>
-            {{/if}}
-        {{/for}}
-        <br>
+{{else data.menu == 2}}
+    {{for data.nano_items}}
+		{{if value.Category == data.category_choice}}
+			<div class="item">
+				<h3><span class="white">{{:value.Category}}</span></h3>
+			</div>
+			{{for value.items :itemValue:itemIndex}}
+				<div class="item">
+					{{:helper.link( itemValue.Name, 'gear', {'buy_item' : itemValue.obj_path, 'cost' : itemValue.Cost}, itemValue.Cost > data.crystals ? 'disabled' : null, null)}} - <span class="white">{{:itemValue.Cost}}</span>
+				</div>
+
+				{{if itemValue.Cost <= data.crystals && data.descriptions}}
+					<div class="item">
+						{{:itemValue.Description}}
+					</div>
+				{{/if}}
+			{{/for}}
+		{{/if}}
     {{/for}}
+{{/if}}
 
     <div class="item">
         {{:helper.link('Buy Random (??)' , 'gear', {'buy_item' : 'random'}, data.crystals <= 0 ? 'disabled' : null, null)}}
