--- a/nano/templates/uplink.tmpl
+++ b/nano/templates/uplink.tmpl
@@ -11,16 +11,15 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
 		<b>Functions</b>:
 	</div>
 	<div class="itemContent">
-		{{:helper.link('Request Items', 'gear', {'menu' : 0}, null, 'fixedLeftWider')}}
-		{{:helper.link(data.descriptions ? 'Hide Descriptions' : 'Show Descriptions', 'gear', {'descriptions' : 1}, data.menu == 2 ? '' : 'disabled', 'fixedLeftWider')}}
+		{{:helper.link('Request Items', 'gear', {'menu' : 0, 'category' : null}, null, 'fixedLeftWider')}}
+		{{:helper.link(data.descriptions ? 'Hide Descriptions' : 'Show Descriptions', 'gear', {'descriptions' : 1}, data.menu == 0 ? '' : 'disabled', 'fixedLeftWider')}}
 		{{:helper.link('Exploitable Information', 'gear', {'menu' : 1}, null, 'fixedLeftWider')}}
-		{{:helper.link('Return', 'arrow-left', {'return' : 1}, null, 'fixedLeft')}}
 		{{:helper.link('Close', 'gear', {'lock' : "1"}, null, 'fixedLeft')}}
 	</div>
 </div>
 <br>
 
-{{if data.menu == 0 || data.menu == 2}}
+{{if data.menu == 0}}
     <H2><span class="white">Request items:</span></H2>
     <span class="white"><i>Each item costs a number of tele-crystals as indicated by the number following their name.</i></span>
 	<div class="item">
@@ -35,39 +34,39 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
 	
 {{if data.menu == 0}}
 	{{for data.nano_items}}
-		<div class="item">
-			{{:helper.link ( value.Category, 'gear', {'menu' : 2, 'category' : value.Category}, null, null)}}
-		</div>
-	{{/for}}
-	<br>
-	<div class="item">
-		{{:helper.link('Buy Random (??)' , 'gear', {'buy_item' : 'random'}, data.crystals <= 0 ? 'disabled' : null, null)}}
-	</div>
-
-{{else data.menu == 2}}
-    {{for data.nano_items}}
 		{{if value.Category == data.category_choice}}
-			<div class="item">
-				<h3><span class="white">{{:value.Category}}</span></h3>
-			</div>
+		<div class="item">
+			{{:helper.link ( value.Category, 'arrow-circle-down', {'menu' : 0, 'category' : null}, null, 'white')}}
+		</div>
+		{{else}}
+		<div class="item">
+			{{:helper.link ( value.Category, 'arrow-circle-right', {'menu' : 0, 'category' : value.Category}, null, 'white')}}
+		</div>
+		{{/if}}
+		{{if value.Category == data.category_choice}}
+			<div class="block">
 			{{for value.items :itemValue:itemIndex}}
 				<div class="item">
-					{{:helper.link( itemValue.Name, 'gear', {'buy_item' : itemValue.obj_path, 'cost' : itemValue.Cost}, itemValue.Cost > data.crystals ? 'disabled' : null, null)}} - <span class="white">{{:itemValue.Cost}}</span>
+					{{:helper.link( itemValue.Name, 'gear', {'buy_item' : itemValue.obj_path, 'cost' : itemValue.Cost}, itemValue.Cost > data.crystals ? 'disabled' : null, 'redButton')}} - <span class="white">{{:itemValue.Cost}}</span>
 				</div>
-
 				{{if itemValue.Cost <= data.crystals && data.descriptions}}
 					<div class="item">
 						{{:itemValue.Description}}
 					</div>
 				{{/if}}
 			{{/for}}
+			</div>
 		{{/if}}
-    {{/for}}
-{{/if}}
-<br>
+	{{/for}}
+	<div class="line"></div>
+	<br>
 	<div class="item">
-        {{:helper.link('Refund item in active hand' , 'gear', {refund : 1}, null, null)}}
+		{{:helper.link('Buy Random Item' , 'gear', {'buy_item' : 'random'}, data.crystals <= 0 ? 'disabled' : null, 'white')}}
+	</div>
+	<div class="item">
+        {{:helper.link('Refund item in active hand' , 'gear', {refund : 1}, null, 'white')}}
     </div>
+{{/if}}
 
 {{else data.menu == 1}}
     <h2><span class="white">Information Record List:</span></h2>
