--- a/nano/templates/uplink.tmpl
+++ b/nano/templates/uplink.tmpl
@@ -31,8 +31,7 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
         </div>
     </div>
     <br>
-	
-{{if data.menu == 0}}
+
 	{{for data.nano_items}}
 		{{if value.Category == data.category_choice}}
 		<div class="item">
@@ -47,7 +46,7 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
 			<div class="block">
 			{{for value.items :itemValue:itemIndex}}
 				<div class="item">
-					{{:helper.link( itemValue.Name, 'gear', {'buy_item' : itemValue.obj_path, 'cost' : itemValue.Cost}, itemValue.Cost > data.crystals ? 'disabled' : null, 'redButton')}} - <span class="white">{{:itemValue.Cost}}</span>
+					{{:helper.link( itemValue.Name, 'gear', {'buy_item' : itemValue.obj_path, 'cost' : itemValue.Cost}, itemValue.Cost > data.crystals ? 'disabled' : null, null)}} - <span class="white">{{:itemValue.Cost}}</span>
 				</div>
 				{{if itemValue.Cost <= data.crystals && data.descriptions}}
 					<div class="item">
@@ -58,7 +57,6 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
 			</div>
 		{{/if}}
 	{{/for}}
-	<div class="line"></div>
 	<br>
 	<div class="item">
 		{{:helper.link('Buy Random Item' , 'gear', {'buy_item' : 'random'}, data.crystals <= 0 ? 'disabled' : null, 'white')}}
@@ -66,7 +64,6 @@ Used In File(s): \code\game\objects\items\devices\uplinks.dm
 	<div class="item">
         {{:helper.link('Refund item in active hand' , 'gear', {refund : 1}, null, 'white')}}
     </div>
-{{/if}}
 
 {{else data.menu == 1}}
     <h2><span class="white">Information Record List:</span></h2>
