--- a/nano/templates/keycard_auth.tmpl
+++ b/nano/templates/keycard_auth.tmpl
@@ -20,6 +20,8 @@ Used In File(s): \code\modules\security_levels\keycard_authentication.dm
 			{{:helper.link('Emergency Response Team', 'exclamation-triangle', { 'triggerevent' : 'Emergency Response Team' })}}
 			{{:helper.link('Grant Emergency Maintenance Access', 'unlock', { 'triggerevent' : 'Grant Emergency Maintenance Access' })}}
 			{{:helper.link('Revoke Emergency Maintenance Access', 'lock', { 'triggerevent' : 'Revoke Emergency Maintenance Access' })}}
+			{{:helper.link('Lift Airlock Access Restrictions', 'unlock', { 'triggerevent' : 'Lift Airlock Access Restrictions' })}}
+			{{:helper.link('Restore Airlock Access Restrictions', 'lock', { 'triggerevent' : 'Restore Airlock Access Restrictions' })}}
 		{{else data.screen == 2}}
 			{{if data.event == 'Emergency Response Team'}}
 				<div class="item">
